--- a/backend/package.json
+++ b/backend/package.json
@@ -23,11 +23,17 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-ws": "^11.1.5",
+    "@nestjs/websockets": "^11.1.5",
     "@prisma/client": "^6.10.1",
+    "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.18.1",
     "chalk": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.1.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
